if no objects in a db, make avgObjSize 0 not nan SERVER-2440